--- a/en/api/reference/requests/api/pool-body.yaml
+++ b/en/api/reference/requests/api/pool-body.yaml
@@ -1,5 +1,6 @@
-pool_body:
-  description: The pool that you want to create.
+pool_minimal_body:
+  description: The minimal set of parameters for the pool creation.
+  summary: Create pool with minimum of parameters
   value:
     project_id: '83859'
     private_name: First pool
@@ -9,3 +10,143 @@ pool_body:
     auto_accept_solutions: false
     defaults:
       default_overlap_for_new_task_suites: 1
+pool_long_body:
+  description: The extended set of parameters for the pool creation.
+  summary: Create pool with extended set of parameters
+  value:
+    project_id: '83859'
+    private_name: My first pool
+    private_comment: This is my first pool
+    public_description: 'Pool''s description '
+    may_contain_adult_content: false
+    will_expire: 2030-09-01T13:00
+    reward_per_assignment: 0.02
+    dynamic_pricing_config:
+      type: SKILL
+      skill_id: '1289'
+      intervals:
+      - from: 0
+        to: 60
+        reward_per_assignment: 0.03
+      - from: 61
+        to: 100
+        reward_per_assignment: 0.04
+    assignment_max_duration_seconds: 300
+    auto_accept_solutions: true
+    auto_accept_period_day: 7
+    auto_close_after_complete_delay_seconds: 60
+    assignments_issuing_config:
+      issue_task_suites_in_creation_order: false
+    filter:
+      and:
+      - category: skill
+        key: 1124
+        operator: GT
+        value: 59.7
+    quality_control:
+      training_requirement:
+        training_pool_id: '21'
+        training_passing_skill_value: 70
+      captcha_frequency: LOW
+      configs:
+        - collector_config:
+            type: ANSWER_COUNT
+          rules:
+          - conditions:
+            - key: assignments_accepted_count
+              operator: GTE
+              value: 12
+            action:
+              type: RESTRICTION_V2
+              parameters:
+                scope: POOL
+                duration_unit: DAYS
+                duration: 10
+                private_comment: Completed 12 pages of tasks in the pool
+      checkpoints_config:
+        real_settings:
+          target_overlap: 5
+          task_distribution_function:
+            scope: PROJECT
+            distribution: UNIFORM
+            window_days: 7
+            intervals:
+            - from: 1
+              to: 100
+              frequency: 5
+            - from: 101
+              to: 1000
+              frequency: 25
+        golden_settings:
+          target_overlap: 5
+          task_distribution_function:
+            scope: PROJECT
+            distribution: UNIFORM
+            window_days: 7
+            intervals:
+            - from: 1
+              to: 100
+              frequency: 5
+            - from: 101
+              to: 1000
+              frequency: 25
+        training_settings:
+          target_overlap: 5
+          task_distribution_function:
+            scope: PROJECT
+            distribution: UNIFORM
+            window_days: 7
+            intervals:
+            - from: 1
+              to: 100
+              frequency: 5
+            - from: 101
+              to: 1000
+              frequency: 25
+    speed_quality_balance:
+      type: TOP_PERCENTAGE_BY_QUALITY
+      percent: 80
+    dynamic_overlap_config:
+      type: BASIC
+      max_overlap: 5
+      min_confidence: 0.9
+      answer_weight_skill_id: '1289'
+      fields:
+      - name: result
+    defaults:
+      default_overlap_for_new_task_suites: 3
+      default_overlap_for_new_tasks: 3
+    mixer_config:
+      real_tasks_count: 6
+      golden_tasks_count: 1
+      training_tasks_count: 1
+      min_real_tasks_count: 2
+      min_golden_tasks_count: 0
+      min_training_tasks_count: 0
+      force_last_assignment: true
+      force_last_assignment_delay_seconds: 10
+      mix_tasks_in_creation_order: true
+      shuffle_tasks_in_task_suite: false
+      golden_task_distribution_function:
+        scope: PROJECT
+        distribution: UNIFORM
+        window_days: 7
+        intervals:
+        - from: 1
+          to: 25
+          frequency: 5
+        - from: 26
+          to: 1000
+          frequency: 25
+      training_task_distribution_function:
+        scope: PROJECT
+        distribution: UNIFORM
+        window_days: 7
+        intervals:
+        - from: 1
+          to: 25
+          frequency: 5
+        - from: 26
+          to: 1000
+          frequency: 25
+    priority: 10
