--- a/en/toloka-apps/api/reference/responses/apps/batch-id.yaml
+++ b/en/toloka-apps/api/reference/responses/apps/batch-id.yaml
@@ -5,16 +5,17 @@ success:
     app_project_id: 8lvN9kBN4wwsj47ZqNal
     status: NEW
     name: Test batch
-    items_count: 2
+    items_count: 4
     item_price: 0.07
-    cost: 0.14
+    cost: 0.28
     cost_of_processed: 0
     created_at: '2023-04-17T08:58:38.692'
     read_only: false
     validation_errors: {}
     items_processed_count: 0
     items_per_state:
-      NEW: 2
+      NEW: 3
+      QUEUED: 1
       PROCESSING: 0
       COMPLETED: 0
       ERROR: 0
@@ -22,4 +23,8 @@ success:
       NO_MONEY: 0
       ARCHIVE: 0
       STOPPED: 0
+    current_time: '2023-04-17T08:58:38.692'
+    etd: '2023-04-17T08:58:38.692'
+    eta: '2023-04-17T08:58:38.692'
+    app_project_eta: '2023-04-17T08:58:38.692'
     priority_order: ONE
