--- a/ru/presets.yaml
+++ b/ru/presets.yaml
@@ -19,9 +19,9 @@ default:
   requester-profile-integration: https://platform.toloka.ai/requester/profile/integration
   rfc4122: https://tools.ietf.org/html/rfc4122
   safari-mobile: https://support.apple.com/ru-ru/guide/safari-developer/dev84bd42758/mac
-  sandbox: https://sandbox.toloka.yandex.com/ru/for-requesters
-  sandbox-requester-profile-integration: https://sandbox.toloka.yandex.com/requester/profile/integration
-  sandbox-workers: https://sandbox.toloka.yandex.com/requester/workers
+  sandbox: https://platform.sandbox.toloka.ai/auth?role=REQUESTER
+  sandbox-requester-profile-integration: https://platform.sandbox.toloka.ai/requester/profile/integration
+  sandbox-workers: https://platform.sandbox.toloka.ai/requester/workers
   templates-video: https://platform.toloka.ai/requester/new/project/old?templateId=video
   templates-video-new: https://platform.toloka.ai/requester/new/project/old?templateId=videoModeration
   time-difference-utc: https://www.yandex.ru/search/?text=utc
