Latest API docs updates

--- a/en/toloka-apps/api/reference/requests/apps/batch-body.yaml
+++ b/en/toloka-apps/api/reference/requests/apps/batch-body.yaml
@@ -11,3 +11,4 @@ batch_body:
       website_url: https://toloka.ai/docs/crowd-kit
     priority_order: ONE
     force_new_original: true
+    ignore_errors: true
